# compile_scheduler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data/: sample_input.txt
include/: compilation_step.h  compilation_target.h  helpers.h  input_parser.h  server.h  solution.h  source_file.h
include/algorithm/: closest_compilation_start_constructor.h  complex_constructor.h  grasp.h  greedy_constructor.h  greedy_unique_source_files_constructor.h  least_busy_server_constructor.h  most_target_dependants_constructor.h  problem.h
include/algorithm/cost_functions/: cost_function.h  least_target_dependants_cost.h  most_dependencies_cost.h
src/: compilation_step.cpp  helpers.cpp  input_parser.cpp  server.cpp  solution.cpp  source_file.cpp
src/algorithm/: closest_compilation_start_constructor.cpp  complex_constructor.cpp  grasp.cpp  greedy_constructor.cpp  greedy_unique_source_files_constructor.cpp  least_busy_server_constructor.cpp  most_target_dependants_constructor.cpp
